--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     window.$docsify = {
       name: '',
       repo: 'https://github.com/bweib/',
-      loadNavbar: true
+      loadNavbar: true,
+      loadSidebar: true
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
