--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script>
     window.$docsify = {
       name: '',
-      repo: 'https://github.com/bweib/',
+      repo: 'https://github.com/bweib',
       loadNavbar: true,
       loadSidebar: true
     }
