--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       name: '',
       repo: 'https://github.com/bweib',
       loadNavbar: true,
-      loadSidebar: true
+      loadSidebar: true,
+      coverpage:true
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
